Fix text alignment in login page.

--- a/src/src/assets/gwlandscape/scss/_forms.scss
+++ b/src/src/assets/gwlandscape/scss/_forms.scss
@@ -13,9 +13,12 @@ p.text-danger.small {
         border: 3px solid $primary;
         color: $primary;
         text-align: right;
-        text-transform: capitalize;
         font-weight: bold;
         box-shadow: $shadow-inner;
+    }
+
+    .text-left {
+      text-align: left;
     }
 
     .input-group-text {
